<resources>
    <string name="all_gardify">Gardify</string>
    <string name="all_devices">Geräte</string>
    <string name="all_camera">Kamera</string>
    <string name="all_photo">Foto</string>
    <string name="all_message">Nachricht</string>
    <string name="all_save">Speichern</string>
    <string name="all_cancel">Abbrechen</string>
    <string name="all_add">Hinzufügen</string>
    <string name="all_delete">Löschen</string>
    <string name="all_anzahl">Anzahl</string>
    <string name="all_description">Beschreibung</string>
    <string name="all_topPlant">Topfpflanze?</string>
    <string name="all_saveToGarden">Im Garten speichern</string>
    <string name="all_network">Network</string>
    <string name="all_plants">Pflanzen</string>
    <string name="all_guidedTour">Guided <b>Tour</b></string>
    <string name="all_toDo">TO-DO</string>
    <string name="all_calendar">Kalender</string>
    <string name="all_search">Suche</string>
    <string name="all_news">News</string>
    <string name="all_ecoScan">Ökoscan</string>
    <string name="all_seeAllPlantInfos">Alle Infos zur Pflanze ansehen</string>
    <string name="all_close">Schließen</string>
    <string name="all_infoWarningTurnOffWarning"><b>Warnung abschalten.</b>  Für laufende Winterperiode. Am 21.06. wird die Warnung automatisch wieder aktiviert.</string>
    <string name="all_infoWarningActivateWarning"><b>Warnung aktivieren.</b>  Die weiteren Parameter können unter Einstellungen individuell angepasst werden.</string>
    <string name="all_anErrorOccurred">Es ist ein Fehler aufgetreten:</string>
    <string name="all_plantsGroup">Pflanzengruppe</string>
    <string name="all_family">Familie</string>
    <string name="all_origin">Herkunft</string>
    <string name="all_storeInMyGarden">In meinen Garten speichern</string>
    <string name="all_moreDetails">Mehr dazu</string>
    <string name="all_back">zurück</string>
    <string name="all_saveToGardenHeaderText">zu meinem Gartenbereich hinzufügen</string>
    <string name="all_dataSavedSuccessfully">Daten erfolgreich gespeichert</string>
    <string name="all_ecologyCriteria">Öko-Kriterien</string>
    <string name="all_ecoElements">Öko-Elemente</string>
    <string name="all_today">Heute</string>
    <string name="all_tomorrow">Morgen</string>
    <string name="all_mainActivity">MainActivity</string>
    <string name="all_plantName">Pflanzenname</string>
    <string name="all_similarPlants">Ähnliche Pflanzen</string>
    <string name="all_resetWarnings">Warnungen zurücksetzen</string>
    <string name="all_resetWarningsMessage">Wir empfehlen das einmalige Zurücksetzen der Grundeinstellungen, wenn Teile deines Gartens vor dem 12.12.2020 angelegt wurden.</string>
    <string name="all_frostWarning">Frostwarnung</string>
    <string name="all_stormWarning">Sturmwarnung</string>
    <string name="all_send">Senden</string>
    <string name="all_newsletterSubscribe">Newsletter bestellen</string>
    <string name="all_login">Anmelden</string>
    <string name="all_email">Email</string>
    <string name="all_password">Passwort</string>
    <string name="all_edit">Bearbeiten</string>
    <string name="all_passwordValidationHint">Passwort muss folgendes enthalten: Großbuchstaben, Nummer, Sonderzeichen  Passwort muss mind. 6 Zeichen sein</string>
    <string name="all_confirm">Bestätigen</string>
    <string name="all_required">Pflichtfelder</string>
    <string name="all_hello">Hallo</string>
    <string name="all_hello_comma_blankspace">Hallo, </string>
    <string name="all_suggestion_message">\ndie Ergänzung der von dir gewünschten Pflanzen mit all ihren To-Dos und Eigenschaften wird aufgrund des hohen Aufkommens einige Zeit in Anspruch nehmen. Die Aktualisierung in "Mein Garten" erfolgt dann automatisch.\nWir bitten um etwas Geduld. Weiterhin viel Spaß mit Gardify.</string>
    <string name="all_scan">Scannen</string>
    <string name="all_passwordDoesNotMatch">Die Passwörter stimmen nicht überein!</string>
    <string name="mainActivity_newVersionReady">Neue Version bereit!</string>
    <string name="mainActivity_install">Installieren</string>
    <string name="mainActivity_firstTimeUserMessage">Willkommen bei gardify! Dies ist die Beta Test-Version der gardify App.\n\nDie offizielle App ist demnächst verfügbar.\nViel Spaß beim Ausprobieren, wir freuen uns auf dein Feedback! </string>
    <string name="mainActivity_noConnectionMaintenance">Wartungsarbeiten: gardify wird gerade aktualisiert.\nBitte versuche es in 30 Minuten noch einmal.</string>
    <string name="mainActivity_understood">Verstanden</string>
    <string name="mainActivity_navigationDrawerOpen">Open navigation drawer</string>
    <string name="mainActivity_navigationDrawerClose">Close navigation drawer</string>
    <string name="splashScreen_copyrightText">© BECKER JOEST VOLK VERLAG</string>
    <string name="splashScreen_text">smart\nund ökologisch\ngärtnern</string>
    <string name="splashScreen_notYetRegistered">Noch nicht\n<b>registriert?</b></string>
    <string name="splashScreen_fundamentalFunctions">Für diese grundlegenden Funktionen ist die\nRegistrierung erforderlich:</string>
    <string name="splashScreen_savePlants">Pflanzen in Mein Garten speichern</string>
    <string name="splashScreen_todos">Pflegehinweise (To-Dos) automatisch\nim Kalender sammeln</string>
    <string name="splashScreen_frost">Frostwarnungen für Pflanzen hinterlegen</string>
    <string name="splashScreen_registerButton">Jetzt kostenlos registrieren</string>
    <string name="splashScreen_loginButton">Direkt zum Login</string>
    <string name="warnings">Warnungen</string>
    <string name="menuActivityMainDrawer_home">Home</string>
    <string name="menuActivityMainDrawer_myGarden"><b>Mein</b> Garten</string>
    <string name="menuActivityMainDrawer_toDo"><b>To-Do</b> Kalender</string>
    <string name="menuActivityMainDrawer_plantSearch">Pflanzen <b>Suche</b></string>
    <string name="menuActivityMainDrawer_plantScan">Pflanzen <b>Scan</b></string>
    <string name="menuActivityMainDrawer_gardifyNews">gardify <b>News</b></string>
    <string name="menuActivityMainDrawer_gardenVideo">garten <b>Videos</b></string>
    <string name="menuActivityMainDrawer_plantDoc">Pflanzen <b>Doc</b></string>
    <string name="menuActivityMainDrawer_gardenWeather">Garten <b>Wetter</b></string>
    <string name="menuActivityMainDrawer_gardifyShop">gardify <b>Shop</b></string>
    <string name="menuActivityMainDrawer_ecoScan">Garten <b>Ökoscan</b></string>
    <string name="menuActivityMainDrawer_gardenGlossary">Garten <b>glossar</b></string>
    <string name="menuActivityMainDrawer_suggestPlant">Pflanzen <b>ergänzen</b></string>
    <string name="menuActivityMainDrawer_gardifyPlus">Gardify <b>Plus</b></string>
    <string name="menuActivityMainDrawerFooter_team">Team</string>
    <string name="menuActivityMainDrawerFooter_agb">AGB</string>
    <string name="menuActivityMainDrawerFooter_shoppingCart">Warenkorb</string>
    <string name="menuActivityMainDrawerFooter_wishList">Wunschliste</string>
    <string name="menuActivityMainDrawerFooter_settings">Einstellungen</string>
    <string name="menuActivityMainDrawerFooter_order">Bestellungen</string>
    <string name="menuActivityMainDrawerFooter_newsletter">Newsletter</string>
    <string name="menuActivityMainDrawerFooter_contact">Kontakt</string>
    <string name="menuActivityMainDrawerFooter_privacy">Datenschutz</string>
    <string name="menuActivityMainDrawerFooter_imprint">Impressum</string>
    <string name="menuActivityMainDrawerFooter_logout">Abmelden</string>
    <string name="home_my">Mein</string>
    <string name="home_garden">Garten</string>
    <string name="home_scan">Scan</string>
    <string name="home_video">Video</string>
    <string name="home_doc">DOC</string>
    <string name="home_weather">Wetter</string>
    <string name="home_shop">Shop</string>
    <string name="home_glossary">Glossar</string>
    <string name="home_suggest">Ergänzen</string>
    <string name="home_plus">Plus</string>
    <string name="home_guided">guided</string>
    <string name="home_tour">tour</string>
    <string name="home_guidedTourPopupMyGarden">Hier kannst du deine Pflanzen, Gartengeräte und ökologische Ausstattung deinem Garten (+) hinzufügen. So entsteht automatisch dein To-Do-Kalender für deinen Garten. Zudem steht dir zur Verfügung:\n
            <font fgcolor='#6ba42a'>&gt;</font> Notizen zu deinen Pflanzen \n
            <font fgcolor='#6ba42a'>&gt;</font> Gartenbereiche hinzufügen \n
            <font fgcolor='#6ba42a'>&gt;</font> Sturmwarnungen für Schirme, Markisen, etc. \n
            <font fgcolor='#6ba42a'>&gt;</font> Frostwarnungen zu deinen gefährdeten Pflanzen \n
            <font fgcolor='#6ba42a'>&gt;</font> Filter (z. B. frostgefährdet, giftig, bienenfreundlich uvm.) \n
            <font fgcolor='#6ba42a'>&gt;</font> Statistik deiner Pflanzen
    </string>
    <string name="home_guidedTourPopupTodoCalendar">Dein To-do-Kalender wird automatisch erzeugt, wenn du Pflanzen in deinen Garten kopiert hast. Er zeigt dir an, was, wann und auch wie es zu tun ist. Hake erledigte To-dos ab, füge eigene To-Dos oder Tagebucheinträge hinzu und lösche To-Dos, die du nicht mehr bekommen möchtest. </string>
    <string name="home_guidedTourPopupSearchPlant">Die Pflanzensuche hilft dir, die richtigen Pflanzen zu finden. Dazu kannst du alle Pflanzen in der Datenbank nach 300 Eigenschaften in Sekunden sortieren. Aus der Pflanzensuche heraus, kannst du auch Pflanzen direkt in deinen Garten kopieren. </string>
    <string name="ecoScan_shareResult">Ergebnis teilen</string>
    <string name="ecoScan_emailNote">(trenne einzelne Adressen mit einem Komma)</string>
    <string name="ecoScan_yourEmail">Deine E-mail</string>
    <string name="ecoScan_from">Von</string>
    <string name="ecoScan_to">An</string>
    <string name="ecoScan_sendOff">Abschicken</string>
    <string name="ecoScan_messageClosingSignature">Viele Grüße,</string>
    <string name="imprint_gardifyAddress"><![CDATA[BECKER JOEST VOLK VERLAG GmbH & Co. KG \nBahnhofsallee 5 \n40721 Hilden \nTelefon 0 21 03 – 9 07 88 0 \nFax 0 21 03 – 9 07 88 28]]></string>
    <string name="imprint_gardifyImpressumRegistrationDetail"><![CDATA[\nRegistergericht Amtsgericht Düsseldorf \nRegisternummer HRA 22734 \nVerkehrsnummer 11460 \nFinanzamt Hilden \nSteuernummer 135/5905/0545 \nUSt-IdNr. DE230403678 \n\nVertreten durch die persönlich haftende Gesellschafterin \nBecker Joest Volk Verwaltungs GmbH \nBahnhofsallee 5 \n40721 Hilden \n\nRegistergericht: Amtsgericht Düsseldorf \nRegisternummer: HRB 72786 \nGeschäftsführer: Ralf Joest, Andreas Grewe, Johanna Hänichen \nRedaktionelle Verantwortung: Ralf Joest / Johanna Hänichen\n]]></string>
    <string name="imprint_liabilityNotice">Haftungshinweis</string>
    <string name="imprint_liabilityNoticeText">"Trotz sorgfältiger inhaltlicher Kontrolle übernehmen wir keine Haftung für die Inhalte externer Links und Foren. Für den Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich.\n"</string>
    <string name="imprint_disputeResolution">Online-Streitbeilegung gemäß Art. 14 Abs. 1 ODR-Verordnung</string>
    <string name="imprint_disputeResolutionText"><![CDATA[Wir nehmen, im Falle einer ungeklärten Streitigkeit, (freiwillig) an einem Streitbeilegungsverfahren mit einer Verbraucherschlichtungsstelle teil. Die für uns zuständige Verbraucherschlichtungsstelle ist: Allgemeine Verbraucherschlichtungsstelle des Zentrums für Schlichtung e. V. \nStraßburger Str. 8 \n77694 Kehl \nTelefon: +49 7851 79579 40 \nTelefax: +49 7851 79579 41 \nInternet: www.verbraucher-schlichter.de \nE-Mail: mail@verbraucher-schlichter.de \nUnsere E-Mail-Adresse lautet: info@bjvv.de \nGestaltung dieser Website \n\nMAKRO CHROMA Joest & Volk OHG, Hilden \nCMS, Datenbank und Programmierung \nnetzlab GmbH]]></string>
</resources>